--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 </head>
 
+
 <body>
-    <div class="md:flex items-center  bg-yellow-100 ">
+    <div class="md:flex items-center justify-evenly bg-yellow-100 ">
         <div class="flex align-middle justify-center pt-5">
             <div class="md:px-2">
                 <h3 class="md:text-xl">---SALE FEVER---</h3>
@@ -23,7 +24,7 @@
                 </h4>
             </div>
         </div>
-        <div>
+        <div class="">
             <img src="./images/Summer 1.png" alt="">
         </div>
     </div>
@@ -49,7 +50,7 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
 
-                                <button class="btn btn-primary">Buy</button>
+                                <button class="btn btn-primary" onclick="buybtn(this)">Buy</button>
 
                             </div>
                         </div>
@@ -78,7 +79,7 @@
                                                 class="mask mask-star-2 bg-orange-400" />
                                         </div>
 
-                                        <button class="btn btn-primary">Buy</button>
+                                        <button class="btn btn-primary" onclick="buybtn(this)">Buy</button>
 
                                     </div>
                                 </div>
@@ -103,7 +104,7 @@
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     </div>
 
-                                    <button class="btn btn-primary">Buy</button>
+                                    <button class="btn btn-primary" onclick="buybtn(this)">Buy</button>
 
                                 </div>
                             </div>
@@ -133,7 +134,7 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
 
-                                <button class="btn btn-primary">Buy</button>
+                                <button class="btn btn-primary" onclick="buybtn(this)">Buy</button>
 
                             </div>
                         </div>
@@ -162,7 +163,7 @@
                                                 class="mask mask-star-2 bg-orange-400" />
                                         </div>
 
-                                        <button class="btn btn-primary">Buy</button>
+                                        <button class="btn btn-primary" onclick="buybtn(this)">Buy</button>
 
                                     </div>
                                 </div>
@@ -187,7 +188,7 @@
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     </div>
 
-                                    <button class="btn btn-primary">Buy</button>
+                                    <button class="btn btn-primary" onclick="buybtn(this)">Buy</button>
 
                                 </div>
                             </div>
@@ -197,14 +198,14 @@
             </div>
             <!-- section three -->
             <div class="">
-                <h2 class="text-3xl flex justify-center mt-5 mb-5">Sportsware</h2>
+                <h2 class="text-3xl flex justify-center mt-5 mb-5">Furniture</h2>
                 <div class="md:flex justify-center items-center gap-20 px-5">
                     <div class="flex justify-center items-center mb-5">
                         <div class="card card-compact w-44 bg-yellow-200 shadow-xl">
                             <img src="./images/prod7.png" width="100px" alt=" Shoes" />
                             <div class="card-body">
-                                <h2 class="text-xl">Sports Black Cap</h2>
-                                <p class="text-xl">49.00 TK</p>
+                                <h2 class="text-xl">Single Relax Chair</h2>
+                                <p class="text-xl">185.00 TK</p>
 
                                 <div class="rating">
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -215,7 +216,7 @@
                                     <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                 </div>
 
-                                <button class="btn btn-primary">Buy</button>
+                                <button class="btn btn-primary" onclick="buybtn(this)">Buy</button>
 
                             </div>
                         </div>
@@ -228,8 +229,8 @@
                                 <div>
                                     <img src="./images/prod8.png" width="100px" alt=" Shoes" />
                                     <div class="card-body">
-                                        <h2 class="text-xl">Full Jersey Set</h2>
-                                        <p class="text-xl">69.00 TK</p>
+                                        <h2 class="text-xl">Children's Play</h2>
+                                        <p class="text-xl">299.00 TK</p>
 
                                         <div class="rating">
                                             <input type="radio" name="rating-2"
@@ -244,7 +245,7 @@
                                                 class="mask mask-star-2 bg-orange-400" />
                                         </div>
 
-                                        <button class="btn btn-primary">Buy</button>
+                                        <button class="btn btn-primary" onclick="buybtn(this)">Buy</button>
 
                                     </div>
                                 </div>
@@ -257,8 +258,8 @@
                             <div class="card card-compact w-44 bg-yellow-200 shadow-xl">
                                 <img src="./images/prod9.png" width="100px" alt=" Shoes" />
                                 <div class="card-body">
-                                    <h2 class="text-xl">Sports Cates</h2>
-                                    <p class="text-xl">159.00 TK</p>
+                                    <h2 class="text-xl">Flexible Sofa</h2>
+                                    <p class="text-xl">339.00 TK</p>
 
                                     <div class="rating">
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -269,7 +270,7 @@
                                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                                     </div>
 
-                                    <button class="btn btn-primary">Buy</button>
+                                    <button class="btn btn-primary" onclick="buybtn(this)">Buy</button>
 
                                 </div>
                             </div>
@@ -282,23 +283,51 @@
         <!-- Coupon Section -->
 
         <div>
-            <div>
+            <div class="">
                 <div>
                     <h1 class="font-semibold">Have Coupon?</h1>
-                    <div class="flex"><input type="text" placeholder="Coupon Code">
-                        <button class="btn btn-secondary">Apply</button>
+                    <div class="flex">
+                        <input type="text" placeholder="Coupon Code" id="CouponCode" class="">
+                        <button class="btn btn-secondary" id="apply" onclick="applyBtnFunc(this)"
+                            disabled>Apply</button>
                     </div>
                 </div>
                 <div>
                     <div>
-                        <h1>Total Price:</h1>
-                        <h1>Discount:</h1>
-                        <h1>Total:</h1>
-                        <button class="btn btn-secondary">Purchase</button>
+                        <div id="" class="my-4 text-blue-800 font-bold">Added Items:</div>
+                        <div id="item-list" class="my-4 text-red-800 font-bold"></div>
+                        <h1>
+                            Total Price: <span id="TP"></span>
+                        </h1>
+                        <h1>Discount: <span id="disCount"></span> </h1>
+                        <h1>Total: <span id="PriceAfterDisc"></span></h1>
+                        <button class=" btn btn-secondary" id="purchase" disabled
+                            onclick="my_modal_4.showModal()">Purchase</button>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <!-- Modal Section -->
+
+    <div class="">
+        <!-- You can open the modal using ID.showModal() method -->
+
+        <dialog id="my_modal_4" class="modal">
+            <div class="modal-box w-11/12 max-w-5xl">
+                <div class="">
+                    <img src="./images/congo.png" alt="">
+                    <h1 class="text-3xl">Congratulations!</h1>
+                </div>
+
+                <div class="modal-action">
+                    <form method="dialog">
+                        <!-- if there is a button, it will close the modal -->
+                        <button class="btn"><a href="./index.html">Close</a></button>
+                    </form>
+                </div>
+            </div>
+        </dialog>
     </div>
     <script src="./script.js"></script>
 </body>
